@@ -1,7 +1,9 @@
 # Electric Boiler Mod, forked from Mobius1
 
 This is a fork of Mobius1's original [Electric Boiler mod](https://mods.factorio.com/mod/electricboiler)
-The Compatabilities with Bob's mods were improved; you no longer need bob's electronics to access higher tiers of electric Boilers
+The Compatabilities with Bob's mods were improved; you no longer need bob's electronics to access higher tiers of electric Boilers.
+Also improved the icon of the research, the research dependencies and individual research items, as well rebalanced some recipies and research costs.
+All of this was done with general balancing in mind, and to make it more similar to existing bob's mods entities.  
 
 # Adds an Electric Boiler to the game.
 There is a config setting that allows you to change the power consumption/output of the boiler in MW. If you input 2000 it'll result in 2GW on the tooltip box. Which means it'll consume 2GW of power to produce lots of steam, maybe you want a powerful steam producer feeding a tank...
