@@ -1,5 +1,11 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 09.10.2022
-  -Forked mod from Mobius1's Electric Boiler Mod 
+  Changes:
+    - Changed research tree and recipies to mirror bob's power
+  Visuals:
+    - Improved Research Tree Icon
+  Compatibility:
+    - Removed Dependency for bob's electronics (unused)
+    - Improved Compatability with bob's power
 
